objects/PRG_BS_Incident_Pipeline_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Affiliates__c</fullName>
        <label>Affiliates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BS_Category__c</fullName>
        <label>BS Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Account__c</fullName>
        <label>Incident Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Category__c</fullName>
        <label>Incident Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Close_Date__c</fullName>
        <label>Incident Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incident_Create_Date__c</fullName>
        <label>Incident Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incident_Number__c</fullName>
        <label>Incident Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Owner__c</fullName>
        <label>Incident Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Priority__c</fullName>
        <label>Incident Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Status__c</fullName>
        <label>Incident Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Run_Date__c</fullName>
        <label>Run Date</label>
        <type>Date</type>
    </fields>
    <label>PRG BS Incident Pipeline Snapshot</label>
    <nameField>
        <label>PRG BS Incident Pipeline Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PRG BS Incident Pipeline Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>